src/styles/sidebar.scss
.sidebar {
  top: 60px;
  left: 0;
  height: calc(100vh - 60px);
  width: 170px;
  box-sizing: border-box;
  padding: 0 15px 0 0;
  transition: left 800ms;

  &.collapsable {
    background: #161617;
    position: absolute;
    opacity: 0.85;
    padding: 0;
  }

  &.hidden {
    left: -170px;
  }

  & span {
    color: white;
  }
}

.sidebar-icon {
  position: absolute;
  top: 75px;
  fill: white;
  left: 10px;
  width: 24px;
  height: 24px;

  &.hidden {
    left: -24px;
  }
}

